@@ -157,7 +157,10 @@ object SnakemakeAPI {
             SECTION_OUTPUT, SECTION_LOG, SECTION_BENCHMARK
     )
 
-    val ALLOWED_LAMBDA_ARGS = mapOf(
+    /**
+     * Set of rule/checkpoint sections that supports lambdas/callable arguments
+     */
+    val ALLOWED_LAMBDA_OR_CALLABLE_ARGS = mapOf(
         SECTION_INPUT to arrayOf(SMK_VARS_WILDCARDS),
         SECTION_GROUP to arrayOf(SMK_VARS_WILDCARDS),
         SECTION_PARAMS to arrayOf(
