@@ -47,6 +47,10 @@ INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
 INSP.INTN.remove.duplicated.arg=Remove duplicated argument
 
+# SmkSectionUnexpectedCallableArgsInspection
+INSP.NAME.section.unexpected.callable.args=Unexpected callable argument
+INSP.NAME.section.unexpected.callable.args.message=Section ''{0}'' does not support callable arguments
+
 # SmkSectionUnexpectedKeywordArgsInspection
 INSP.NAME.section.unexpected.keyword.args=Unexpected keyword argument
 INSP.NAME.section.unexpected.keyword.args.message=Section ''{0}'' does not support keyword arguments
